--- a/src/app/pessoa/pessoa.component.html
+++ b/src/app/pessoa/pessoa.component.html
@@ -21,9 +21,9 @@
         <div class="row">
             <div class="w-25 p-3">
 
-                <div>
+                <div class="form-group">
                     <label>Nome: </label>
-                    <input (keyup)="jegue($event)" type="text" class="form-control" name="nome" [(ngModel)]="pessoa.nome">
+                    <input  type="text" class="form-control" name="nome" [(ngModel)]="pessoa.nome">
                 </div>
 
                 <div class="form-group">
@@ -50,10 +50,10 @@
         <div>
             <div>
                 <label> DDD</label>
-                <input type="text" class=" input-sm col-md-1" name="ddd" [(ngModel)]="telefone.ddd" >
+                <input type="text" maxlength="2" class=" input-sm col-md-1" name="ddd" [(ngModel)]="telefone.ddd" >
 
                 <label>Numero</label>
-                <input type="text" class=" input-sm col-md-1" name="numero" [(ngModel)]="telefone.numero">
+                <input type="text" class="col-md-1" name="numero" [(ngModel)]="telefone.numero">
 
                 <button type="button" class="btn btn-primary col-md-1" (click)="salvarTelefone()">Adicionar</button>
 
@@ -81,7 +81,9 @@
 
         </div>
 
-        <button type="submit" class="btn btn-primary col-md-1" (click)="salvarNoBanco()">Cadastrar</button>
+        <button type="submit" class="btn btn-primary col-md-1" (click)="salvarNoBanco()"
+         routerLink="/listagem" routerLinkActive="active">Cadastrar</button>
     </form>
     
 </div>
+
