--- a/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
+++ b/src/app/pessoa/editar-pessoa/editar-pessoa.component.html
@@ -81,7 +81,7 @@
 
       </div>
 
-      <button type="submit" class="btn btn-primary col-md-1" (click)="salvarNoBanco()"
+      <button type="submit" class="btn btn-primary col-md-1" (click)="atualizarNoBanco()"
        routerLink="/listagem" routerLinkActive="active">Atualizar</button>
   </form>
   
